--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="pt-br" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>O descaso e a falta de infraestrutura nas calçadas de Maringá</title>
-    <link rel="stylesheet" href="geral.css">
+    <title>Adoção de felicidade</title>
+    <link rel="stylesheet" href="estilo.css">
   </head>
   <body>
 
@@ -17,16 +17,16 @@
 </div>
 
 <div class="conteudo">
-  <h1>Autoridades competentes </h1>
+  <h1>ADOÇÃO DE ANIMAIS </h1>
 </div>
 
 <div class="conteudo3">
-  <h1>Benefícios para a sociedade</h1>
+  <h1>Adote um companheiro</h1>
 </div>
 
 <div class="rodape">
-  Aluno: Ana Beatriz Valeriano Araújo N°3 2°F
-  Aluno: Ana Júlia Magioto N°4 2°F
+  Aluno: Ana Beatriz Valeriano Araújo N°3 1°B
+
 </div>
 
   </body>
