--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Adoção de felicidade</title>
+    <title>O descaso e a falta de infraestrutura nas calçadas de Maringá</title>
     <link rel="stylesheet" href="estilo.css">
   </head>
   <body>
@@ -17,11 +17,11 @@
 </div>
 
 <div class="conteudo">
-  <h1>ADOÇÃO DE ANIMAIS </h1>
+  <h1>As calçadas  </h1>
 </div>
 
 <div class="conteudo3">
-  <h1>Adote um companheiro</h1>
+  <h1>Clique aqui para ver </h1>
 </div>
 
 <div class="rodape">
