--- a/index.html
+++ b/index.html
@@ -3,21 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>O descaso e a falta de infraestrutura nas calçadas de Maringá</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="geral.css">
   </head>
   <body>
 
-      <nav>
-          <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="pagina01.html">Página 01</a></li>
-              <li><a href="pagina02.html">Página 02</a></li>
-          </ul>
-      </nav>
+<a href="index.html">Início</a>
+<a href="pagina01.html">As calçadas </a>
+<a href="pagina02.html">Possíveis Soluções</a>
+         
 </div>
 
 <div class="conteudo">
-  <h1>As calçadas  </h1>
+  <h1>As calçadas </h1>
 </div>
 
 <div class="conteudo3">
