--- a/index.html
+++ b/index.html
@@ -18,13 +18,7 @@
 </div>
 
 <div class="conteudo3">
-  <h1>Clique aqui para ver </h1>
-</div>
-
-<div class="rodape">
-  Aluno: Ana Beatriz Valeriano Araújo N°3 1°B
-
-</div>
+  <h1>As calçadas </h1>
 
   </body>
 </html>
