--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
 
-<a href="index.html">Início</a>
-<a href="pagina01.html">As calçadas </a>
+<a href="index.html">Início/ </a>
+<a href="pagina01.html">As calçadas/ </a>
 <a href="pagina02.html">Possíveis Soluções</a>
          
 </div>
