--- a/pagina01.html
+++ b/pagina01.html
@@ -9,9 +9,9 @@
 
       <nav>
           <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="pagina01.html">Página 01</a></li>
-              <li><a href="pagina02.html">Página 02</a></li>
+              <li><a href="index.html">Início/ </a></li>
+              <li><a href="pagina01.html">As calçadas/ </a></li>
+              <li><a href="pagina02.html">Possíveis soluções</a></li>
           </ul>
       </nav>
 </div>
@@ -23,11 +23,5 @@
 <div class="conteudo3">
   <h1>Benefícios para a sociedade</h1>
 </div>
-
-<div class="rodape">
-  Aluno: Ana Beatriz Valeriano Araújo N°3 2°F
-  Aluno: Ana Júlia Magioto N°4 2°F
-</div>
-
   </body>
 </html>
