--- a/pagina01.html
+++ b/pagina01.html
@@ -5,16 +5,10 @@
     <title>O descaso e a falta de infraestrutura nas calçadas de Maringá</title>
     <link rel="stylesheet" href="geral.css">
   </head>
-  <body>
-
-      <nav>
-          <ul>
-              <li><a href="index.html">Início/ </a></li>
-              <li><a href="pagina01.html">As calçadas/ </a></li>
-              <li><a href="pagina02.html">Possíveis soluções</a></li>
-          </ul>
-      </nav>
-</div>
+  <body>   
+<a href="index.html">Início/ </a>
+<a href="pagina02.html">Possíveis soluções</a>
+    
 
 <div class="conteudo">
   <h1>Autoridades competentes </h1>
