--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <body>
 
 <a href="index.html">Início/ </a>
-<a href="pagina01.html">As calçadas/ </a>
 <a href="pagina02.html">Possíveis Soluções</a>
          
 </div>
@@ -18,7 +17,7 @@
 </div>
 
 <div class="conteudo3">
-  <h1>As calçadas </h1>
+  <h1><a href="pagina01.html">As calçadas/ </a> </h1>
 
   </body>
 </html>
