--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </div>
 
 <div class="conteudo3">
-  <h1><a href="pagina01.html">As calçadas/ </a> </h1>
+  <h1><a href="pagina01.html">As calçadas </a> </h1>
 
   </body>
 </html>
