--- a/pagina01.html
+++ b/pagina01.html
@@ -7,7 +7,7 @@
   </head>
   <body>   
 <a href="index.html">Início/ </a>
-<a href="pagina02.html">Possíveis soluções</a>
+<a href="pagina02.html">Possíveis Soluções</a>
     
 
 <div class="conteudo">
