--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <div class="conteudo3">
   <h1><a href="pagina01.html">As calçadas </a> </h1>
+  <img src="calçada1.jpeg"></img>
 
   </body>
 </html>
