--- a/pagina01.html
+++ b/pagina01.html
@@ -16,6 +16,8 @@
 
 <div class="conteudo3">
   <h1>Benefícios para a sociedade</h1>
+  <img id="calçada 1" src="calçada1.jpeg" alt="">
+
 </div>
   </body>
 </html>
