--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 </div>
 
 <div class="conteudo3">
-  <h1><a href="pagina01.html">As calçadas </a> </h1>.
+  <h1> As calçadas são uma das principais vias de transportes nas cidades. Então, sem ou com elas em 
+  estado precário, a locomoção da maioria dos habitantes fica comprometida.
+No caso de Maringá,<a href="pagina01.html">aqui estão alguns exemplos desta precariedade.</a></h1>
   
   </body>
 </html>
