--- a/pagina01.html
+++ b/pagina01.html
@@ -11,12 +11,9 @@
     
 
 <div class="conteudo">
-  <h1>Autoridades competentes </h1>
+  <h1>Exemplos </h1>
 </div>
-
-<div class="conteudo3">
-  <h1>Benefícios para a sociedade</h1>
-  <img id="calçada 1" src="calçada1.jpeg" alt="">
+  <img id="calçada 1" src="Ana Beatriz/calçada1.jpeg" alt="">
 
 </div>
   </body>
