--- a/pagina02.html
+++ b/pagina02.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="geral.css">
   </head>
   <body>   
-<a href="index.html">Início/ </a>
-<a href="pagina02.html">Possíveis Soluções</a>
+    <a href="index.html">Início/ </a>
+    <a href="pagina02.html">Exemplos/ </a>
+    <a href="pagina02.html">Possíveis Soluções</a>
     
 
 <div class="conteudo">
