--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   </head>
   <body>
 
-<a href="index.html">Início/ </a>
-<a href="pagina02.html">Possíveis Soluções</a>
+    <a href="index.html">Início/ </a>
+    <a href="pagina02.html">Exemplos/ </a>
+    <a href="pagina02.html">Possíveis Soluções</a>
          
 </div>
 
