--- a/pagina01.html
+++ b/pagina01.html
@@ -7,6 +7,7 @@
   </head>
   <body>   
 <a href="index.html">Início/ </a>
+<a href="pagina02.html">Exemplos/ </a>
 <a href="pagina02.html">Possíveis Soluções</a>
     
 
