--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <a href="index.html">Início/ </a>
     <a href="pagina02.html">Exemplos/ </a>
-    <a href="pagina02.html">Possíveis Soluções</a>
+    <a href="pagina01.html">Possíveis Soluções</a>
          
 </div>
 
@@ -18,9 +18,9 @@
 </div>
 
 <div class="conteudo3">
-  <h1> As calçadas são uma das principais vias de transportes nas cidades. Então, sem ou com elas em 
+  <h1> As calçadas são uma das principais vias de transportes nas cidades. Então, sem as mesmas ou com elas em 
   estado precário, a locomoção da maioria dos habitantes fica comprometida.
-No caso de Maringá,<a href="pagina01.html">aqui estão alguns exemplos desta precariedade.</a></h1>
+No caso de Maringá,<a href="pagina01.html">aqui estão alguns exemplos desta falta de infraestrutura nessa cidade.</a></h1>
   
   </body>
 </html>
