--- a/pagina01.html
+++ b/pagina01.html
@@ -7,14 +7,14 @@
   </head>
   <body>   
 <a href="index.html">Início/ </a>
-<a href="pagina02.html">Exemplos/ </a>
+<a href="pagina01.html">Exemplos/ </a>
 <a href="pagina02.html">Possíveis Soluções</a>
     
 
 <div class="conteudo">
   <h1>Exemplos </h1>
 </div>
-  <img id="calçada 1" src="Ana Beatriz/calçada1.jpeg" alt="">
+  <img id="calçada 1" src="Ana Beatriz/calçada1.jpg" alt="">
 
 </div>
   </body>
