--- a/pagina01.html
+++ b/pagina01.html
@@ -14,7 +14,7 @@
 <div class="conteudo">
   <h1>Exemplos </h1>
 </div>
-  <img id="calçada 1" src="Ana Beatriz/calçada1.jpg" alt="">
+  <img id="calçada 1" src="c1.jpg" alt="">
 
 </div>
   </body>
