--- a/pagina01.html
+++ b/pagina01.html
@@ -13,9 +13,7 @@
 
 <div class="conteudo">
   <h1>Exemplos </h1>
-</div>
-  <img id="calçada 1" src="c1.jpg" alt="">
 
-</div>
+  <img  src="c1.jpg" >
   </body>
 </html>
