--- a/pagina01.html
+++ b/pagina01.html
@@ -13,6 +13,11 @@
 
 <div class="conteudo">
   <h1>Exemplos </h1>
+  <h2> As calçadas possuem um problema que se alastram desde o crescimento da população nas cidades.
+    Um problema que não afeta somente um tipo de pessoa, mas sim vários que possuem ou não deficiências físicas.
+    Como é mostrado nos anexos, as calçadas possuem diversas rachaduras e falhas que impossibilitam as pessoas de caminhar com tranquilidade. Pois, ao mínimo sinal de desatenção, podemos acabar no chão.
+    Pessoas idosas, cadeirantes, pessoas com deficiência visual são as que mais são afetadas por este problema, pois não há jeito que possam transitar nas calçadas no estado em que se encontram, com diversos perigos a todo momento.
+      </h2>
 
   <img  src="c1.jpg" >
   </body>
