--- a/pagina01.html
+++ b/pagina01.html
@@ -8,9 +8,10 @@
   <body>   
 <a href="index.html">Início/ </a>
 <a href="pagina01.html">Exemplos/ </a>
-<a href="pagina02.html">Possíveis Soluções</a>
+<a href="pagina02.html">Partes Interessadas</a>
+<a href="pagina03.html">Possíveis Soluções</a>
     
-<img  src="c2.jpeg" >
+    
 <div class="conteudo">
   <h1>Exemplos </h1>
   
