--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <a href="index.html">Início/ </a>
     <a href="pagina01.html">Exemplos/ </a>
-    <a href="pagina02.html">Partes Interessadas</a>
+    <a href="pagina02.html">Partes Interessadas/ </a>
     <a href="pagina03.html">Possíveis Soluções</a>
     
          
