--- a/pagina01.html
+++ b/pagina01.html
@@ -8,7 +8,7 @@
   <body>   
 <a href="index.html">Início/ </a>
 <a href="pagina01.html">Exemplos/ </a>
-<a href="pagina02.html">Partes Interessadas</a>
+<a href="pagina02.html">Partes Interessadas/ </a>
 <a href="pagina03.html">Possíveis Soluções</a>
     
     
