--- a/pagina01.html
+++ b/pagina01.html
@@ -14,8 +14,9 @@
     
 <div class="conteudo">
   <h1>Exemplos </h1>
-  <img src="img/c1.jpg">
-
+  <img src="c1.jpg">
+  <img src="c2.jpg">
+  <img src="c3.jpg">
   
   </body>
 </html>
