--- a/pagina01.html
+++ b/pagina01.html
@@ -14,9 +14,8 @@
     
 <div class="conteudo">
   <h1>Exemplos </h1>
-  <img src="c1.jpg">
-  <img src="c2.jpg">
-  <img src="c3.jpg">
-  
+  <img src="img/calçada 1.jpg">
+  <img src="img/calçada 2.jpg">
+  <img src="img/calçada 3.jpg">
   </body>
 </html>
