--- a/pagina01.html
+++ b/pagina01.html
@@ -14,8 +14,10 @@
     
 <div class="contenido">
   <h1>Exemplos </h1>
-  <img  width="450px" height="450px"src="img/calçada 1.jpg">
-  <img  width="450px" height="450px"src="img/calçada 2.jpg">
-  <img  width="450px" height="450px"src="img/calçada 3.jpg">
+  <img  width="400px" height="400px"src="img/calçada 1.jpg">
+  <img  width="400px" height="400px"src="img/calçada 2.jpg">
+  <img  width="400px" height="400px"src="img/calçada 3.jpg">
+<h2>E quem se beneficia?<a href="pagina01.html">Veja aqui! </a> </h2>
+
   </body>
 </html>
