--- a/pagina02.html
+++ b/pagina02.html
@@ -21,8 +21,8 @@
   <h1>Entidades públicas, a comunidade em geral são as beneficiadas com as soluções . 
     Políticos locais são beneficiados com diversos reconhecimentos que a cidade irá possuir, atraindo mais turistas e novos moradores.
     Já a comunidade, será beneficiada com a garantia de segurança de poder andar sem nenhum medo de que a qualquer momento pode cair e essa queda ocasionar futuras lesões.
-    
     </h1>
+    <h2>E como esse problema poderia ser melhorado? <a href="pagina03.html">Veja aqui! </a> </h2>
 </div>
   </body>
 </html>
