--- a/pagina01.html
+++ b/pagina01.html
@@ -17,7 +17,8 @@
   <img  width="400px" height="400px"src="img/calçada 1.jpg">
   <img  width="400px" height="400px"src="img/calçada 2.jpg">
   <img  width="400px" height="400px"src="img/calçada 3.jpg">
-<h2>E quem se beneficia? <a href="pagina02.html">Veja aqui! </a> </h2>
+
+<h2>E como esse problema poderia ser melhorado? <a href="pagina02.html">Veja aqui! </a> </h2>
 
   </body>
 </html>
