--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <a href="index.html">Início/ </a>
     <a href="pagina01.html">Exemplos/ </a>
-    <a href="pagina02.html">Partes Interessadas/ </a>
-    <a href="pagina03.html">Possíveis Soluções</a>
+    <a href="pagina02.html">Possíveis Soluções/ </a>
+    <a href="pagina03.html">Partes Interessadas</a>
     
          
 </div>
