--- a/pagina02.html
+++ b/pagina02.html
@@ -8,9 +8,8 @@
   <body>   
     <a href="index.html">Início/ </a>
     <a href="pagina01.html">Exemplos/ </a>
-    <a href="pagina02.html">Partes Interessadas/ </a>
-    <a href="pagina03.html">Possíveis Soluções</a>
-    
+    <a href="pagina02.html">Possíveis Soluções/ </a>
+    <a href="pagina03.html">Partes Interessadas</a>
 
 <div class="conteudo">
   <h1>Possíveis Soluções</h1>
@@ -21,6 +20,7 @@
     Retirada e manutenção correta de árvores danificadas.
     
     </h1>
+    <h2>E quem se beneficia? <a href="pagina03.html">Veja aqui! </a> </h2>
 </div>
   </body>
 </html>
