--- a/pagina01.html
+++ b/pagina01.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="geral.css">
   </head>
   <body>   
-<a href="index.html">Início/ </a>
-<a href="pagina01.html">Exemplos/ </a>
-<a href="pagina02.html">Partes Interessadas/ </a>
-<a href="pagina03.html">Possíveis Soluções</a>
+    <a href="index.html">Início/ </a>
+    <a href="pagina01.html">Exemplos/ </a>
+    <a href="pagina02.html">Possíveis Soluções/ </a>
+    <a href="pagina03.html">Partes Interessadas</a>
     
     
 <div class="contenido">
