--- a/pagina03.html
+++ b/pagina03.html
@@ -24,7 +24,7 @@
     Políticos locais são beneficiados com diversos reconhecimentos que a cidade irá possuir, atraindo mais turistas e novos moradores.
     Já a comunidade, será beneficiada com a garantia de segurança de poder andar sem nenhum medo de que a qualquer momento pode cair e essa queda ocasionar futuras lesões.
     </h1>
-    
+    <h2>Obrigada! ♡ </h2>
 </div>
   </body>
 </html>
